[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/cat/tabs/levelup.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.270588, 0.258824, 0.313726, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.192157, 0.219608, 1 )

[node name="LevelUp" type="CanvasLayer" groups=["tab"]]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100

[node name="Panel" type="PanelContainer" parent="Margin"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 620.0

[node name="VBox" type="VBoxContainer" parent="Margin/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 873.0
margin_bottom = 513.0

[node name="CloseButton" type="Button" parent="Margin/Panel/VBox"]
margin_left = 802.0
margin_right = 866.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "X"

[node name="Margin" type="MarginContainer" parent="Margin/Panel/VBox"]
margin_top = 68.0
margin_right = 866.0
margin_bottom = 506.0
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Margin/Panel/VBox/Margin"]
margin_left = 30.0
margin_top = 30.0
margin_right = 836.0
margin_bottom = 408.0
custom_constants/separation = 0

[node name="AvailableOrbs" type="Label" parent="Margin/Panel/VBox/Margin/VBox"]
margin_right = 806.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "null"
align = 1
valign = 1

[node name="RequiredOrbs" type="Label" parent="Margin/Panel/VBox/Margin/VBox"]
margin_top = 40.0
margin_right = 806.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 40 )
text = "null"
align = 1
valign = 1

[node name="Items" type="VBoxContainer" parent="Margin/Panel/VBox/Margin/VBox"]
margin_top = 129.0
margin_right = 806.0
margin_bottom = 129.0
size_flags_vertical = 6

[node name="Label" type="Label" parent="Margin/Panel/VBox/Margin/VBox"]
margin_top = 264.0
margin_right = 806.0
margin_bottom = 278.0
size_flags_vertical = 10
align = 1
valign = 1

[node name="UpButton" type="Button" parent="Margin/Panel/VBox/Margin/VBox"]
margin_left = 203.0
margin_top = 278.0
margin_right = 603.0
margin_bottom = 328.0
rect_min_size = Vector2( 400, 50 )
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Level Up"
